2001-10-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-expand-url): Fix the last change.
	(w3m-url-hierarchical-schemes): Add `file'.
	(w3m-goto-url): Use `\`' instead of `^' as a meta character.

	* w3m.el (w3m-fontify-anchors): Fix.
	(w3m-url-fallback-base): New constant.
	(w3m-expand-url): Make it robust against illegal base-URL.

	* w3m.el (w3m-url-components-regexp): New constant.
	(w3m-url-hierarchical-schemes): Ditto.
	(w3m-expand-url): Reimplemented.
	(w3m-view-this-url): Remove a redundant local variable.
	(w3m-mouse-view-this-url): Call `w3m-view-this-url'.
	(w3m-goto-url): Refer `w3m-url-components-regexp' to delete a
	fragment part of URL.

	* mime-w3m.el (mime-w3m-view-this-url): When there is an inline
	image under point, display it.
	(mime-w3m-mouse-view-this-url): Call `mime-w3m-view-this-url'.

2001-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-expand-url): Emergency fixed.

2001-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-expand-url): Make it work correctly when a url
	begins with "//".

2001-10-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-language): New option.
	(w3m-default-coding-system): Refer `w3m-language' to decide
	default value.
	(w3m-coding-system-priority-list): Ditto.
	(w3m-toolbar): Ditto.
	(w3m-url-to-file-name): Moved to avoid byte-compile warnings.
	(w3m-expand-file-name-as-url): Ditto.
	(w3m-url-local-p): Ditto.
	(w3m-url-dtree-p): Ditto.
	(w3m-view-this-url): When there is an inline image under point,
	display it.
	(w3m-mouse-view-this-url): Ditto.
	(w3m-view-url-with-external-browser): Renamed from
	`w3m-view-current-url-with-external-browser'.  Handle an inline
	image under point.
	(w3m-download-this-url): Handle an inline image under point.
	(w3m-info-like-map): Reconstructed.

	* w3m-search.el (w3m-search-default-coding-system): Abolished.
	(w3m-search-engine-alist): Refer `w3m-language' to decide default
	value.
	(w3m-search-escape-query-string): Refer